--- a/QiHuangDJ/VIewController/PersonCenter/KHLPICSettingsViewController.xib
+++ b/QiHuangDJ/VIewController/PersonCenter/KHLPICSettingsViewController.xib
@@ -7,6 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KHLPICSettingsViewController">
             <connections>
+                <outlet property="logoutButton" destination="yOw-yO-Cl4" id="QSe-tS-0Ha"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
